@@ -4,6 +4,8 @@ Version 1.10.4+svn:
      * Keep a spawned unit from disappearing on reload in scenario 6b
  * Language and i18n:
    * Updated translations: Chinese (Traditional), Croatian, French, Italian
+ * Miscellaneous and bug fixes:
+   * Fix OOS when dismissing a recall in a multiplayer campaign (bug #19924).
 
 Version 1.10.4:
  * Campaigns:
